packages/forge-dsl/fixtures/errors/e02-duplicate-knot.fable
// expect: FORGE201
-> den

=== den ===
A fox den.
-> END

=== den ===
Another fox den, suspiciously similar.
-> END
